--- a/src/index.html
+++ b/src/index.html
@@ -1335,19 +1335,19 @@
         </section>
         <div class="hero-wrapper_companies">
             <div class="netflix-logo">
-               <img class="netflix" src="netflix.png" alt="netflix">                    
+               <img class="netflix" src="/src/img/netflix.png" alt="netflix">                    
             </div>
             <div class="reddit-logo">
-                <img class="reddit" src="reddit.png" alt="netflix">                  
+                <img class="reddit" src="/src/img/reddit.png" alt="netflix">                  
             </div>
             <div class="amazon-logo">
-                <img class="amazon" src="amazon.png" alt="netflix">        
+                <img class="amazon" src="/src/img/amazon.png" alt="netflix">        
             </div>
             <div class="discord-logo">
-                <img class="discord" src="discord.png" alt="netflix">                
+                <img class="discord" src="/src/img/discord.png" alt="netflix">                
             </div>
             <div class="spotify-logo">
-                <img class="spotify" src="spotify.png" alt="netflix">                  
+                <img class="spotify" src="/src/img/spotify.png" alt="netflix">                  
             </div>
         </div>
         <section class="hero-section_three">
@@ -1361,7 +1361,7 @@
                 <div class="hero-section_three_content swiper-wrapper">
                     <div class="hero-section_content-box swiper-slide">
                         <div class="content-box_top">
-                            <img src="robert.png" alt="Viezh Robert">
+                            <img src="/src/img/robert.png" alt="Viezh Robert">
                             <div class="hero-section_content_title-font">
                                 <span class="hero-section_title-font">Viezh Robert</span>
                                 <span class="hero-section_subtitle-font">Warsaw,Poland</span>
@@ -1378,7 +1378,7 @@
                     </div>
                     <div class="hero-section_content-box swiper-slide">
                         <div class="content-box_top">
-                            <img src="christy.png" alt="Yessica Christy">
+                            <img src="/src/img/christy.png" alt="Yessica Christy">
                             <div class="hero-section_content_title-font">
                                 <span class="hero-section_title-font">Yessica Christy</span>
                                 <span class="hero-section_subtitle-font">Shanxi, China</span>
@@ -1395,7 +1395,7 @@
                     </div>
                     <div class="hero-section_content-box swiper-slide">
                         <div class="content-box_top">
-                            <img src="kim.png" alt="Kim Young Jou">
+                            <img src="/src/img/kim.png" alt="Kim Young Jou">
                             <div class="hero-section_content_title-font">
                                 <span class="hero-section_title-font">Kim Young Jou</span>
                                 <span class="hero-section_subtitle-font">Seoul, South Korea</span>
@@ -1411,7 +1411,7 @@
                     </div>
                     <div class="hero-section_content-box swiper-slide">
                         <div class="content-box_top">
-                            <img src="robert.png" alt="Viezh Robert">
+                            <img src="/src/img/robert.png" alt="Viezh Robert">
                             <div class="hero-section_content_title-font">
                                 <span class="hero-section_title-font">Viezh Robert</span>
                                 <span class="hero-section_subtitle-font">Warsaw,Poland</span>
@@ -1428,7 +1428,7 @@
                     </div>
                     <div class="hero-section_content-box swiper-slide">
                         <div class="content-box_top">
-                            <img src="robert.png" alt="Viezh Robert">
+                            <img src="/src/img/robert.png" alt="Viezh Robert">
                             <div class="hero-section_content_title-font">
                                 <span class="hero-section_title-font">Viezh Robert</span>
                                 <span class="hero-section_subtitle-font">Warsaw,Poland</span>
@@ -1445,7 +1445,7 @@
                     </div>
                     <div class="hero-section_content-box swiper-slide">
                         <div class="content-box_top">
-                            <img src="robert.png" alt="Viezh Robert">
+                            <img src="/src/img/robert.png" alt="Viezh Robert">
                             <div class="hero-section_content_title-font">
                                 <span class="hero-section_title-font">Viezh Robert</span>
                                 <span class="hero-section_subtitle-font">Warsaw,Poland</span>
