change road to css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" >
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="freebies-css.css">
+    <link rel="stylesheet" type="text/css" href="/src/freebies-css.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/> 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
